--- a/styles/books.css
+++ b/styles/books.css
@@ -4,16 +4,14 @@ html {
   font-family: "Roboto", sans-serif;
 }
 
-.banner  {
-  padding-top: 72px;
-  left: 0;
-  right: 0;
+.banner {
+  padding: 72px 0 0 0;
 }
 .banner img {
   width: 100%;
 }
 
-section{
+section {
   padding: 10px;
 }
 
@@ -42,7 +40,7 @@ h1 em {
 
 /* === HEADING STYLE #1 === */
 .one {
-  margin-top: 80px;
+  margin: 40px;
 }
 .one h1 {
   text-align: center;
@@ -105,20 +103,263 @@ h1 em {
   background-color: #333;
 }
 
+/* Book Cards CSS */
+
+:root {
+  --d: 700ms;
+  --e: cubic-bezier(0.19, 1, 0.22, 1);
+  --font-sans: "Rubik", sans-serif;
+  --font-serif: "Cardo", serif;
+}
+
+.page-content {
+  display: grid;
+  grid-gap: 1rem;
+  padding: 1rem;
+  max-width: 100%;
+  margin: 0 auto;
+  gap: 5%;
+  font-family: var(--font-sans);
+}
+
+.card {
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  overflow: hidden;
+  padding: 1rem;
+  width: 100%;
+  aspect-ratio: 1/1;
+  text-align: center;
+  color: whitesmoke;
+  background-color: whitesmoke;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
+    0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1),
+    0 16px 16px rgba(0, 0, 0, 0.1);
+}
+.card:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 110%;
+  background-size: cover;
+  background-position: 0 0;
+  transition: transform calc(var(--d) * 1.5) var(--e);
+  pointer-events: none;
+}
+.card:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200%;
+  pointer-events: none;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.009) 11.7%,
+    rgba(0, 0, 0, 0.034) 22.1%,
+    rgba(0, 0, 0, 0.072) 31.2%,
+    rgba(0, 0, 0, 0.123) 39.4%,
+    rgba(0, 0, 0, 0.182) 46.6%,
+    rgba(0, 0, 0, 0.249) 53.1%,
+    rgba(0, 0, 0, 0.32) 58.9%,
+    rgba(0, 0, 0, 0.394) 64.3%,
+    rgba(0, 0, 0, 0.468) 69.3%,
+    rgba(0, 0, 0, 0.54) 74.1%,
+    rgba(0, 0, 0, 0.607) 78.8%,
+    rgba(0, 0, 0, 0.668) 83.6%,
+    rgba(0, 0, 0, 0.721) 88.7%,
+    rgba(0, 0, 0, 0.762) 94.1%,
+    rgba(0, 0, 0, 0.79) 100%
+  );
+  transform: translateY(-50%);
+  transition: transform calc(var(--d) * 2) var(--e);
+}
+.card:before {
+  background-size: 100%;
+  background-position: bottom 65px center;
+}
+.card:nth-child(1):before {
+  background-image: url("../assets/images/badla.jpeg");
+}
+.card:nth-child(2):before {
+  background-image: url("../assets/images/not_out.jpeg");
+}
+.card:nth-child(3):before {
+  background-image: url("../assets/images/KBC-I.jpeg");
+}
+.card:nth-child(4):before {
+  background-image: url("../assets/images/bday_celebration.jpeg");
+}
+.card:nth-child(5):before {
+  background-image: url("../assets/images/gulabo_sitabo.jpeg");
+}
+.card:nth-child(6):before {
+  background-image: url("../assets/images/KBC-II.jpeg");
+}
+.card:nth-child(7):before {
+  background-image: url("../assets/images/jhund.jpeg");
+}
+.content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
+  transition: transform var(--d) var(--e);
+  z-index: 1;
+}
+.content > * + * {
+  margin-top: 1rem;
+}
+.title {
+  font-size: 2.2rem;
+  font-weight: bold;
+  line-height: 0;
+  color:white;
+}
+.copy {
+  font-family: var(--font-serif);
+  font-size: 1.125rem;
+  font-style: italic;
+  line-height: 1.35;
+}
+.btn {
+  cursor: pointer;
+  margin-top: 1.5rem;
+  padding: 0.85rem 1.7rem;
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: 0.025rem;
+  text-transform: uppercase;
+  color: white;
+  background-color: black;
+  border: none;
+}
+.btn:hover {
+  background-color: #000000;
+}
+
+/* .title {
+  font-family: 'Righteous', cursive;
+  font-size: 2.3rem;
+  color: #fff;
+  text-shadow: 
+    0 .5rem .5rem #fff,
+    0 .5rem 1rem #fff,
+    0 .5rem 2rem #8938E6,
+    0 .5rem 3rem #8938E6,
+    0 .5rem 4rem #8938E6,
+    0 .5rem 5rem #8938E6,
+    0 .5rem 6rem #8938E6,
+    0 .5rem 7rem #8938E6,
+    0 .5rem 8rem #8938E6;
+} */
+
+
+@media (hover: hover) and (min-width: 600px) {
+  .card:after {
+    transform: translateY(0);
+  }
+  .content {
+    transform: translateY(calc(100% - 4.5rem));
+  }
+  .content > *:not(.title) {
+    opacity: 0;
+    transform: translateY(1rem);
+    transition: transform var(--d ) var(--e), opacity var(--d) var(--e);
+  }
+  .card:hover,
+  .card:focus-within {
+    align-items: center;
+  }
+  .card:hover:before,
+  .card:focus-within:before {
+    transform: translateY(-4%);
+  }
+  .card:hover:after,
+  .card:focus-within:after {
+    transform: translateY(-50%);
+  }
+  .card:hover .content,
+  .card:focus-within .content {
+    transform: translateY(0);
+  }
+  .card:hover .content > *:not(.title),
+  .card:focus-within .content > *:not(.title) {
+    opacity: 1;
+    transform: translateY(0);
+    transition-delay: calc(var(--d) / 8);
+  }
+  .card:focus-within:before,
+  .card:focus-within:after,
+  .card:focus-within .content,
+  .card:focus-within .content > *:not(.title) {
+    transition-duration: 0s;
+  }
+}
+
+.banner ~ section{
+  height: fit-content;
+  padding-bottom: 150px;
+}
+
+/* Media Queries */
+
 @media screen and (max-width: 835px) {
-  .one h1{
+  .title{
+    font-size: 1.5rem;
+  }
+  .one h1 {
     font-size: 40px;
   }
-  .three h1{
+  .three h1 {
     font-size: 30px;
   }
 }
 
 @media screen and (max-width: 690px) {
-  .one h1{
+  
+  .one h1 {
     font-size: 30px;
   }
-  .three h1{
+  .three h1 {
     font-size: 25px;
+  }
+}
+
+@media (min-width: 600px) {
+  .page-content {
+    grid-template-columns: repeat(1, 1fr);
+    max-width: 80%;
+  }
+}
+@media (min-width: 800px) {
+  .page-content {
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 100%;
+  }
+  
+}
+@media (max-width: 975px) {
+  .card:nth-child(4) .title{
+    font-size: 1.5rem;
+  }
+  
+}
+@media (min-width: 1150px) {
+  .page-content {
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 90%;
+    gap: 10%;
+  }
+  .card:nth-child(4) .title{
+    font-size: 2.0rem;
   }
 }
