--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+
 #slider {
   padding-top: 72px;
 }
@@ -71,6 +72,7 @@ svg{width:100%;}
   text-align: center;
   text-transform: uppercase;
   padding-top: 5%;
+  margin-bottom: 5%;
 }
 .one h1 span {
   display: block;
@@ -106,15 +108,14 @@ svg{width:100%;}
 
 
 
-.gallery {
+/* .gallery {
   overflow: hidden;
-}
+} */
 
 .swiper-container {
-  margin: 50px 0px ;
+  margin: 0px 0px ;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  width: 90%;
-  margin-left: 5%;
+  width: 100%;
   aspect-ratio: 3/1;
   /* height: 450px; */
   border-radius: 20px;
@@ -126,9 +127,14 @@ svg{width:100%;}
   justify-content: center;
   align-items: center;
 }
+.swiper-container  .swiper-wrapper {
+  margin-bottom: 10px;
+}
+
 .swiper-container  .item {
-  width: 80%;
-  height: 50%;
+  width: 90%;
+  aspect-ratio: 1/1;
+  /* height: fit-content; */
   background: transparent;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   border-radius: 8px;
@@ -141,6 +147,7 @@ svg{width:100%;}
   width: 100%;
   height: 100%;
   border-radius: 8px;
+  object-fit: cover;
 }
 
 .swiper-container  .bg {
@@ -161,6 +168,9 @@ svg{width:100%;}
 .swiper-container  .bg3 {
   animation-duration: 5s;
 }
+
+
+
 @keyframes slide {
   0% {
     transform: translateX(-25%);
