--- a/styles/about.css
+++ b/styles/about.css
@@ -13,6 +13,11 @@
   margin: 0;
 }
 
+.about{
+  width: 100%;
+  padding: 50px;
+}
+
 .word {
   font-family: "Anton", sans-serif;
   perspective: 1000px;
@@ -133,4 +138,16 @@
   top: 40px;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.top {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  justify-items: center;
+  align-content: center;
+}
+
+.top h2, .top img {
+  width: 45%;
 }
