--- a/styles/contact.css
+++ b/styles/contact.css
@@ -9,7 +9,6 @@ html {
 }
 .banner img {
   width: 100%;
-  
 }
 
 .contact {
@@ -116,10 +115,25 @@ label,
   transition: background 300ms ease-in-out;
 }
 
-
-
 .info_templete > .message {
   text-align: center;
+  font-size: 18px;
+}
+
+.a-icon {
+  display: flex;
+  
+}
+
+.message > h2 {
+  margin: 40px auto;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  color: #CFC547;
+  text-align: center;
+  letter-spacing: 1px;
+  text-shadow: 3px 4px 7px rgba(81,67,21,0.8);
 }
 
 .info_templete span {
