--- a/styles/contact.css
+++ b/styles/contact.css
@@ -11,32 +11,45 @@ html {
   width: 100%;
 }
 
-.contact {
+.contact-form  {
   display: flex;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   padding: 0px;
-  justify-content: space-between;
+  justify-content: space-around ;
+  
 }
 
-.contact > div {
-  width: 100%;
-  /* border: 1px solid rgba(65, 65, 65, 0.558); */
+.contact-form > div {
+  width: 80%;
   margin: 2%;
   padding: 1%;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
-.contact .row {
+.contact-form .row {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
-  width: 100%;
-  gap: 5%;
+  width: 40%;
+  /* gap: 5%; */
 }
 
-.contact .row > div {
+.contact-form .row > div {
   width: 100%;
+}
+.contact-form .row > div  > input{
+  width: 100%;
+}
+
+.inputs{
+  display: flex;
+  justify-content: space-around;
+}
+.inputs ~ div{
+  display: flex;
+  justify-content: center;
 }
 
 .form__group {
@@ -115,9 +128,9 @@ label,
   transition: background 300ms ease-in-out;
 }
 
-.info_templete > .message {
-  text-align: center;
-  font-size: 18px;
+.info_templete {
+  width: 100%;
+  font-size: 1.2rem;
 }
 
 .a-icon {
@@ -125,37 +138,29 @@ label,
   
 }
 
-.message > h2 {
+.head-h2 {
   margin: 40px auto;
   font-family: 'Ubuntu', sans-serif;
   font-size: 40px;
   font-weight: bold;
-  color: #CFC547;
+  color:  #FFD700;;
   text-align: center;
   letter-spacing: 1px;
   text-shadow: 3px 4px 7px rgba(81,67,21,0.8);
 }
 
-.info_templete span {
-  display: inline-block;
-}
-.info_templete > div {
-  margin: 5px 5px;
-}
-
-.info .icon_tag {
-  border: 2px solid #000;
-  padding: 5px 7px;
-  border-radius: 50%;
-  font-size: 20px;
-}
-
-.info .icon_result {
-  padding: 7px;
+.info {
+  width: 100%;
+  position: relative; 
+  padding: 0% 3%;
+  align-items: center;
+  justify-content: center;
 }
 
 .social-container {
-  width: 100%;
+  position: absolute; 
+  bottom: 0;
+  width: 90%;
   margin: 35px auto;
   text-align: center;
 }
@@ -208,18 +213,80 @@ label,
   transition: all 265ms ease-in;
 }
 
+#gmap_canvas{
+  width: 100%;
+  aspect-ratio: 1/1;
+}
+.mapouter{
+  width: 100%;
+  aspect-ratio: 1/1;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  border: 2px solid #FFD700;
+}
+
+.contact {
+  margin: 3% 5%;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  
+}
+
+.contact > div {
+  width: 46%;
+  aspect-ratio: 1/1;
+  position: relative;
+}
+
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+}
+
+
+.table { 
+  margin-top: 8%;
+}
+
+.tr {  
+  margin: 2%;
+  display: flex;
+  align-items: center;
+  align-self: center;
+}
+.tr > .td:first-child { 
+  font-size: 1.5rem;
+  width: 50px;
+  aspect-ratio: 1/1;
+  padding: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #848eb7;
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.tr > .td:nth-child(2) { 
+  width: 100%;
+  font-size: 1rem;
+  padding: 10px 0px 10px 10px;
+}
+
 @media screen and (max-width: 835px) {
-  .contact {
+  .contact-form-form {
     flex-direction: column;
     padding: 10px;
   }
 }
 
 @media screen and (max-width: 690px) {
-  .contact > div {
+  .contact-form-form > div {
     padding: 20px;
   }
-  .contact .row {
+  .contact-form-form .row {
     flex-direction: column;
   }
 
@@ -227,4 +294,151 @@ label,
     width: 150px;
     background-size: 270px;
   }
+}
+@media screen and (max-width: 1280px) {
+  .contact {
+    margin: 3% 0%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .info {
+    width: 100%;
+    position: relative; 
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .table { 
+    margin-top: 4%;
+  }
+  
+  .social-container {
+    bottom: 0;
+    width: 100%;
+    margin: 0px auto;
+  }
+}
+
+@media screen and (max-width: 1085px) {
+  .info_templete {
+    font-size: 1rem;
+  }
+  .tr > .td:nth-child(2) { 
+    font-size: 0.9rem;
+  }
+  .head-h2{
+    margin: 20px auto;
+  }
+}
+@media screen and (max-width: 950px) {
+  .info_templete {
+    font-size: 0.9rem;
+  }
+ 
+  .head-h2{
+    margin: 10px auto;
+  }
+
+  .contact > div {
+    width: 49%;
+  }
+}
+@media screen and (max-width: 830px) {
+  .contact {
+    margin: 3% 20%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .contact > div {
+    width: 60%;
+    aspect-ratio: 0/0;
+  }
+  .info {
+    position: static; 
+  }
+  
+  .social-container {
+    position: static ; 
+  }
+}
+@media screen and (max-width: 690px) {
+  .inputs{
+    display: flex;
+    flex-direction: column;;
+    justify-content: space-around;
+  }
+  .contact-form .row {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 80%;
+    margin-left: 10%;
+  }
+
+  .contact {
+    margin: 3% 10%;
+    width: 80%;
+  }
+
+  .contact > div {
+    width: 80%;
+    aspect-ratio: 0/0;
+  }
+  
+}
+@media screen and (max-width: 500px) {
+  .inputs{
+    display: flex;
+    flex-direction: column;;
+    justify-content: space-around;
+  }
+  .contact-form .row {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 80%;
+    margin-left: 10%;
+  }
+  .contact {
+    margin: 3% 5%;
+    width: 90%;
+  }
+
+  .contact > div {
+    width: 100%;
+    aspect-ratio: 0/0;
+  }
+  .inputs{
+    display: flex;
+    flex-direction: column;;
+    justify-content: space-around;
+  }
+
+  .contact-form > div {
+    width: 100%;
+    margin: 2%;
+  }
+
+  .tr > .td:first-child {
+    font-size: 1.1rem;
+    width: 35px;
+  }
+
+  .head-h2{
+    margin: 30px auto;
+  }
+
+  .message{
+    width: 100%;
+  }
+  
+
 }
